--- a/VulkanTutorialProject/VulkanTutorialProject.vcxproj.filters
+++ b/VulkanTutorialProject/VulkanTutorialProject.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="lve_pipeline.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="lve_device.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lve_window.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="lve_pipeline.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="lve_device.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
