--- a/VulkanTutorialProject/VulkanTutorialProject.vcxproj
+++ b/VulkanTutorialProject/VulkanTutorialProject.vcxproj
@@ -22,12 +22,14 @@
     <ClInclude Include="first_app.hpp" />
     <ClInclude Include="lve_pipeline.hpp" />
     <ClInclude Include="lve_window.hpp" />
+    <ClInclude Include="lve_device.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="first_app.cpp" />
     <ClCompile Include="lve_pipeline.cpp" />
     <ClCompile Include="lve_window.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="lve_device.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="compile.bat" />
