--- a/VulkanTutorialProject/VulkanTutorialProject.vcxproj
+++ b/VulkanTutorialProject/VulkanTutorialProject.vcxproj
@@ -23,6 +23,7 @@
     <ClInclude Include="lve_pipeline.hpp" />
     <ClInclude Include="lve_window.hpp" />
     <ClInclude Include="lve_device.hpp" />
+    <ClInclude Include="lve_swap_chain.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="first_app.cpp" />
@@ -30,6 +31,7 @@
     <ClCompile Include="lve_window.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="lve_device.cpp" />
+    <ClCompile Include="lve_swap_chain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="compile.bat" />
