--- a/VulkanTutorialProject/VulkanTutorialProject.vcxproj
+++ b/VulkanTutorialProject/VulkanTutorialProject.vcxproj
@@ -98,10 +98,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>;C:\GraphicsLibraries\glm;C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\include;C:\GraphicsLibraries\Vulkan\Include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>;C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\lib-vc2022;C:\GraphicsLibraries\Vulkan\Lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);vulkan-1.lib;glfw3.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -112,12 +115,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>;C:\GraphicsLibraries\glm;C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\include;C:\GraphicsLibraries\Vulkan\Include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>;C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\lib-vc2022;C:\GraphicsLibraries\Vulkan\Lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);vulkan-1.lib;glfw3.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -126,13 +132,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\include;C:\GraphicsLibraries\glm;C:\GraphicsLibraries\Vlukan\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\include;C:\GraphicsLibraries\glm;C:\GraphicsLibraries\Vlukan\Include;%(AdditionalIncludeDirectories);C:\GraphicsLibraries\glm;C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\include;C:\GraphicsLibraries\Vulkan\Include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\GraphicsLibraries\Vlukan\Lib;C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>vulkan-1.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\GraphicsLibraries\Vlukan\Lib;C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories);C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\lib-vc2022;C:\GraphicsLibraries\Vulkan\Lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>vulkan-1.lib;glfw3.lib;%(AdditionalDependencies);vulkan-1.lib;glfw3.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -143,15 +149,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\include;C:\GraphicsLibraries\glm;C:\GraphicsLibraries\Vlukan\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\include;C:\GraphicsLibraries\glm;C:\GraphicsLibraries\Vlukan\Include;%(AdditionalIncludeDirectories);C:\GraphicsLibraries\glm;C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\include;C:\GraphicsLibraries\Vulkan\Include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\GraphicsLibraries\Vlukan\Lib;C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>vulkan-1.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\GraphicsLibraries\Vlukan\Lib;C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories);C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\lib-vc2022;C:\GraphicsLibraries\Vulkan\Lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>vulkan-1.lib;glfw3.lib;%(AdditionalDependencies);vulkan-1.lib;glfw3.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
