--- a/VulkanTutorialProject/VulkanTutorialProject.vcxproj
+++ b/VulkanTutorialProject/VulkanTutorialProject.vcxproj
@@ -26,6 +26,7 @@
     <ClInclude Include="lve_model.hpp" />
     <ClInclude Include="lve_pipeline.hpp" />
     <ClInclude Include="lve_renderer.hpp" />
+    <ClInclude Include="lve_utils.hpp" />
     <ClInclude Include="lve_window.hpp" />
     <ClInclude Include="lve_device.hpp" />
     <ClInclude Include="lve_swap_chain.hpp" />
@@ -165,7 +166,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\include;C:\GraphicsLibraries\glm;C:\GraphicsLibraries\Vlukan\Include;%(AdditionalIncludeDirectories);C:\GraphicsLibraries\glm;C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\include;C:\GraphicsLibraries\Vulkan\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\include;C:\GraphicsLibraries\glm;C:\GraphicsLibraries\Vlukan\Include;%(AdditionalIncludeDirectories);C:\GraphicsLibraries\Vulkan\Include;C:\GraphicsLibraries\tinyobjloader</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -194,7 +196,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\include;C:\GraphicsLibraries\glm;C:\GraphicsLibraries\Vlukan\Include;%(AdditionalIncludeDirectories);C:\GraphicsLibraries\glm;C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\include;C:\GraphicsLibraries\Vulkan\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\GraphicsLibraries\glfw-3.3.8.bin.WIN64\include;C:\GraphicsLibraries\glm;C:\GraphicsLibraries\Vlukan\Include;%(AdditionalIncludeDirectories);C:\GraphicsLibraries\Vulkan\Include;C:\GraphicsLibraries\tinyobjloader</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
