--- a/VulkanTutorialProject/VulkanTutorialProject.vcxproj
+++ b/VulkanTutorialProject/VulkanTutorialProject.vcxproj
@@ -53,6 +53,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="compile.bat" />
+    <None Include="shaders\simple_shader.frag" />
+    <None Include="shaders\simple_shader.frag.spv" />
+    <None Include="shaders\simple_shader.vert" />
+    <None Include="shaders\simple_shader.vert.spv" />
     <None Include="simple_shader.frag" />
     <None Include="simple_shader.frag.spv" />
     <None Include="simple_shader.vert" />
