--- a/VulkanTutorialProject/VulkanTutorialProject.vcxproj.filters
+++ b/VulkanTutorialProject/VulkanTutorialProject.vcxproj.filters
@@ -128,5 +128,8 @@
     <None Include="shaders\simple_shader.frag.spv" />
     <None Include="shaders\simple_shader.vert" />
     <None Include="shaders\simple_shader.vert.spv" />
+    <None Include="shaders\compile.bat">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
