--- a/VulkanTutorialProject/VulkanTutorialProject.vcxproj
+++ b/VulkanTutorialProject/VulkanTutorialProject.vcxproj
@@ -33,6 +33,7 @@
     <ClInclude Include="lve_window.hpp" />
     <ClInclude Include="lve_device.hpp" />
     <ClInclude Include="lve_swap_chain.hpp" />
+    <ClInclude Include="point_light_system.hpp" />
     <ClInclude Include="simple_render_system.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -49,19 +50,23 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="lve_device.cpp" />
     <ClCompile Include="lve_swap_chain.cpp" />
+    <ClCompile Include="point_light_system.cpp" />
     <ClCompile Include="simple_render_system.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="compile.bat" />
+    <None Include="envWindowsExample.cmake" />
     <None Include="shaders\compile.bat" />
+    <None Include="shaders\point_light.frag" />
+    <None Include="shaders\point_light.frag.spv" />
+    <None Include="shaders\point_light.vert" />
+    <None Include="shaders\point_light.vert.spv" />
     <None Include="shaders\simple_shader.frag" />
     <None Include="shaders\simple_shader.frag.spv" />
     <None Include="shaders\simple_shader.vert" />
     <None Include="shaders\simple_shader.vert.spv" />
-    <None Include="simple_shader.frag" />
-    <None Include="simple_shader.frag.spv" />
-    <None Include="simple_shader.vert" />
-    <None Include="simple_shader.vert.spv" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
