--- a/VulkanTutorialProject/VulkanTutorialProject.vcxproj.filters
+++ b/VulkanTutorialProject/VulkanTutorialProject.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="Shaders">
       <UniqueIdentifier>{18937724-f376-4f29-a82b-e9d8771489f1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="CMake">
+      <UniqueIdentifier>{35dbc7e5-d3a5-4bbf-9eb4-7efa146603cb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lve_window.hpp">
@@ -63,6 +66,9 @@
     <ClInclude Include="lve_descriptors.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="point_light_system.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lve_window.cpp">
@@ -107,29 +113,41 @@
     <ClCompile Include="lve_descriptors.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="point_light_system.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="simple_shader.vert">
+    <None Include="shaders\simple_shader.frag">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="simple_shader.frag">
+    <None Include="shaders\simple_shader.frag.spv">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="compile.bat">
+    <None Include="shaders\simple_shader.vert">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="simple_shader.frag.spv">
+    <None Include="shaders\simple_shader.vert.spv">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="simple_shader.vert.spv">
-      <Filter>Shaders</Filter>
+    <None Include="envWindowsExample.cmake">
+      <Filter>CMake</Filter>
     </None>
-    <None Include="shaders\simple_shader.frag" />
-    <None Include="shaders\simple_shader.frag.spv" />
-    <None Include="shaders\simple_shader.vert" />
-    <None Include="shaders\simple_shader.vert.spv" />
     <None Include="shaders\compile.bat">
-      <Filter>Source Files</Filter>
+      <Filter>Shaders</Filter>
     </None>
+    <None Include="shaders\point_light.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\point_light.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\point_light.frag.spv" />
+    <None Include="shaders\point_light.vert.spv" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt">
+      <Filter>CMake</Filter>
+    </Text>
   </ItemGroup>
 </Project>
